# local-git-stat

./: Cargo.toml  README.md  tauri.conf.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
capabilities/: default.json
src/: git_process.rs  main.rs  scanner.rs
ui/: app.js  index.html  styles.css
