[package]
name = "local-git-stat"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3"
num_cpus = "1.16"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process", "time", "sync", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7" }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"
